[package]
name = "web3_address_helper_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.15"
tokio = { version = "1", features = ["full"] }
ethers = "2.0.1"
notify-rust = "4.9.0"
rdev = "0.5.3"
serde = { version = "1"}
serde_json = "1.0"
once_cell = "1.19.0"
clap = { version = "4.0", features = ["derive"] }
hotwatch = "0.5.0"
mac-notification-sys = "0.6.1"